Add a couple extra links.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>ropable.com</h1>
         <p>I'm Ashley Felton, a web developer based in Perth, Western Australia.
         I mostly do backend and architecture stuff, as you might be able to tell ;-)</p>
-        <p>I enjoy climbing, hacking and reading <a href="https://news.ycombinator.com">Hacker News</a>.</p>
+        <p>I enjoy climbing (indoor & outdoor), hacking and reading <a href="https://news.ycombinator.com">Hacker News</a>.</p>
       </div>
     </div>
 
@@ -33,6 +33,8 @@
             <ul>
                 <li><a href="http://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
                 <li><a href="http://ropable.no-ip.org">Raspberry Pi temp monitoring</a> (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
+                <li><a href="http://ropable.com/wiki/index.html">Personal TiddlyWiki</a></li>
+                <li><a href="http://ropable.com/pwyky/">30k wiki in Python</a></li>
                 <li>The <a href="http://ropable.com/blog/">old blog</a></li>
                 <li>The <a href="http://ropable.com/gallery2/">old photo gallery</a></li>
             </ul>
