--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
+	<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" /> 
+	<link rel="openid2.local_id" href="https://profiles.google.com/ropable0" /> 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
