--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
-	<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" /> 
-	<link rel="openid2.local_id" href="https://profiles.google.com/ropable0" /> 
+	<link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" />
+	<link rel="openid2.local_id" href="https://profiles.google.com/ropable0" />
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
@@ -22,8 +22,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>ropable.com</h1>
-        <p>I'm Ashley Felton, a web developer based in Perth, Western Australia.
-        I mostly do backend and architecture stuff, as you might be able to tell ;-)</p>
+        <p>I'm Ashley Felton, a full-stack web developer based in Perth, Western Australia.
+        I mostly do backend and architecture, not so much UI work. Does it show? ;-)</p>
         <p>I enjoy climbing (indoor & outdoor), hacking and reading <a href="https://news.ycombinator.com">Hacker News</a>.</p>
       </div>
     </div>
