Added ref to Reddit scraper project.

--- a/index.html
+++ b/index.html
@@ -19,20 +19,12 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-        <div class="jumbotron">
-            <div class="container">
-                <h1>ropable.com</h1>
-                <p>I'm Ashley Felton, a full-stack web developer based in Perth, Western Australia.
-                I mostly do backend and architecture, not so much UI work. Does it show? ;-)</p>
-                <p>I enjoy climbing (indoor & outdoor), hacking on things and browsing <a href="https://news.ycombinator.com">Hacker News</a>.</p>
-            </div><!-- end container -->
-        </div><!-- end jumbotron -->
-        <div class="container">
-            <div class="row">
+        <div class="jumbotron"> <div class="container"> <h1>ropable.com</h1> <p>I'm Ashley Felton, a full-stack web developer based in Perth, Western Australia.  I mostly do backend and architecture, not so much UI work. Does it show? ;-)</p> <p>I enjoy climbing (indoor & outdoor), hacking on things and browsing <a href="https://news.ycombinator.com">Hacker News</a>.</p> </div><!-- end container --> </div><!-- end jumbotron --> <div class="container"> <div class="row">
                 <div class="col-md-8">
                     <h4>Sundry projects:</h4>
                     <ul>
                         <li><a href="http://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
+                        <li><a href="https://plus.google.com/photos/105774289252638144353/albums/5834409724508218081?authkey=CIaXlu-yodLplwE">1000 highly-rated images</a> scraped from Reddit for an auto-updating image carousel (<a href="https://bitbucket.org/ropable/slideshow-pi">source</a>)</li>
                         <li><a href="http://ropable.no-ip.org">Raspberry Pi temp monitoring</a> (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
                         <li><a href="http://ropable.com/wiki/index.html">Personal TiddlyWiki</a></li>
                         <li><a href="http://ropable.com/pwyky/">30k wiki in Python</a></li>
