Add link to Stack Overflow profile.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <li><a href="https://twitter.com/ropable">Twitter</a></li>
                         <li><a href="https://bitbucket.org/ropable">Bitbucket</a></li>
                         <li><a href="https://github.com/ropable">Github</a></li>
+                        <li><a href="http://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
                     </ul>
                 </div><!-- end col -->
             </div><!-- end row -->
