Add sticky footer.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+        <div id="wrap">
         <div class="jumbotron">
             <div class="container">
                 <h1>ropable.com</h1>
@@ -53,11 +54,12 @@
                     </ul>
                 </div><!-- end col -->
             </div><!-- end row -->
-            <hr>
-            <footer>
-                <p>&copy; Ashley Felton 2005-2013</p>
-            </footer>
         </div> <!-- /container -->
+        <div id="push"></div>
+        </div> <!-- /wrap -->
+        <div id="footer">
+            <p class="text-center"><small>&copy; Ashley Felton 2005-2013</small></p>
+        </div> <!-- end footer -->
 
         <!-- Piwik Tag -->
         <script type="text/javascript">
