Update to remove Pi URL. Update copyright year. Add The Crag URL.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <ul>
                         <li><a href="http://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
                         <li><a href="https://plus.google.com/photos/105774289252638144353/albums/5834409724508218081?authkey=CIaXlu-yodLplwE">1000 highly-rated images</a> scraped from Reddit for an auto-updating image carousel (<a href="https://bitbucket.org/ropable/slideshow-pi">source</a>)</li>
-                        <li><a href="http://ropable.no-ip.org">Raspberry Pi temp monitoring</a> (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
+                        <li>Raspberry Pi temperature monitoring & charting (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
                         <li><a href="http://almosttaken.in/">New blog</a> (just notes to self)</li>
                         <li><a href="http://ropable.com/wiki/index.html">Personal TiddlyWiki</a></li>
                         <li><a href="http://ropable.com/pwyky/">30k wiki in Python</a></li>
@@ -50,7 +50,8 @@
                         <li><a href="https://twitter.com/ropable">Twitter</a></li>
                         <li><a href="https://bitbucket.org/ropable">Bitbucket</a></li>
                         <li><a href="https://github.com/ropable">Github</a></li>
-                        <li><a href="http://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
+                        <li><a href="https://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
+                        <li><a href="https://www.thecrag.com/climber/ropable">The Crag</a></li>
                     </ul>
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -58,7 +59,7 @@
         <div id="push"></div>
         </div> <!-- /wrap -->
         <div id="footer">
-            <p class="text-center"><small>&copy; Ashley Felton 2005-2013</small></p>
+            <p class="text-center"><small>&copy; Ashley Felton 2005-2014</small></p>
         </div> <!-- end footer -->
 
         <!-- Piwik Tag -->
