--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>ropable.com</title>
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
         <!-- OpenID delegation -->
         <link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" />
-        <link rel="openid2.local_id" href="https://profiles.google.com/ropable0" />
-        <script src="js/vendor/fittext.js"></script>
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <link rel="openid2.local_id" href="https://plus.google.com/+AshleyFelton" />
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -23,7 +21,8 @@
         <div id="wrap">
         <div class="jumbotron">
             <div class="container">
-                <h1 id="responsive_headline">ropable.com</h1>
+                <h1 class="hidden-xs">ropable.com</h1>
+                <h3 class="visible-xs">ropable.com</h3>
                 <p>I'm Ashley Felton, a full-stack web developer based in Perth, Western Australia.  I mostly do backend and architecture, not so much UI work. Does it show? ;-)</p>
                 <p>I enjoy climbing (indoor & outdoor), hacking, web culture and browsing <a href="https://news.ycombinator.com">Hacker News</a>.</p>
             </div><!-- end container -->
@@ -36,7 +35,7 @@
                         <li><a href="http://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
                         <li><a href="https://plus.google.com/photos/105774289252638144353/albums/5834409724508218081?authkey=CIaXlu-yodLplwE">1000 highly-rated images</a> scraped from Reddit for an auto-updating image carousel (<a href="https://bitbucket.org/ropable/slideshow-pi">source</a>)</li>
                         <li>Raspberry Pi temperature monitoring & charting (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
-                        <li><a href="http://almosttaken.in/">New blog</a> (just notes to self)</li>
+                        <li><a href="https://almosttaken.in/">New blog</a> (just notes to self)</li>
                         <li><a href="http://ropable.com/wiki/index.html">Personal TiddlyWiki</a></li>
                         <li><a href="http://ropable.com/pwyky/">30k wiki in Python</a></li>
                         <li>The <a href="http://ropable.com/blog/">old blog</a></li>
@@ -51,6 +50,7 @@
                         <li><a href="https://twitter.com/ropable">Twitter</a></li>
                         <li><a href="https://bitbucket.org/ropable">Bitbucket</a></li>
                         <li><a href="https://github.com/ropable">Github</a></li>
+                        <li><a href="https://au.linkedin.com/in/AshleyFelton">LinkedIn</a></li>
                         <li><a href="https://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
                         <li><a href="https://www.thecrag.com/climber/ropable">The Crag</a></li>
                     </ul>
@@ -60,23 +60,7 @@
         <div id="push"></div>
         </div> <!-- /wrap -->
         <div id="footer">
-            <p class="text-center"><small>&copy; Ashley Felton 2005-2014</small></p>
+            <p class="text-center"><small>&copy; Ashley Felton 2005-2015</small></p>
         </div> <!-- end footer -->
-
-        <!-- Piwik Tag -->
-        <script type="text/javascript">
-            var pkBaseURL = (("https:" == document.location.protocol) ? "https://www.ropable.com/piwik/" : "http://www.ropable.com/piwik/");
-            document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-            </script><script type="text/javascript">
-            try {
-                var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-                piwikTracker.trackPageView();
-                piwikTracker.enableLinkTracking();
-            } catch( err ) {}
-        </script><noscript><p><img src="http://www.ropable.com/piwik/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-        <!-- End Piwik Tag -->
-        <script>
-            window.fitText( document.getElementById("responsive_headline") );
-        </script>
     </body>
 </html>
