--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </head>
     <body>
         <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="wrap">
         <div class="jumbotron">
             <div class="container">
                 <h1 class="hidden-xs">ropable.com</h1>
                 <h3 class="visible-xs">ropable.com</h3>
-                <p>I'm Ashley Felton, a full-stack web developer based in Perth, Western Australia.  I mostly do backend and architecture, not so much UI work. Does it show? ;-)</p>
-                <p>I enjoy climbing (indoor & outdoor), hacking, web culture and browsing <a href="https://news.ycombinator.com">Hacker News</a>.</p>
+                <p>I'm Ashley Felton, a full-stack web developer and sysadmin based in Perth, Western Australia.  I mostly do backend and architecture, not so much UI. Does it show? ;-)</p>
+                <p>I enjoy strength training, climbing (indoor & outdoor), hacking, web culture and browsing <a href="https://news.ycombinator.com">Hacker News</a>.</p>
             </div><!-- end container -->
         </div><!-- end jumbotron -->
         <div class="container">
@@ -32,27 +32,22 @@
                 <div class="col-md-8">
                     <h4>Sundry projects:</h4>
                     <ul>
-                        <li><a href="http://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
+                        <li><a href="https://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
                         <li><a href="https://plus.google.com/photos/105774289252638144353/albums/5834409724508218081?authkey=CIaXlu-yodLplwE">1000 highly-rated images</a> scraped from Reddit for an auto-updating image carousel (<a href="https://bitbucket.org/ropable/slideshow-pi">source</a>)</li>
                         <li>Raspberry Pi temperature monitoring & charting (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
-                        <li><a href="https://almosttaken.in/">New blog</a> (just notes to self)</li>
-                        <li><a href="http://ropable.com/wiki/index.html">Personal TiddlyWiki</a></li>
-                        <li><a href="http://ropable.com/pwyky/">30k wiki in Python</a></li>
-                        <li>The <a href="http://ropable.com/blog/">old blog</a></li>
-                        <li>The <a href="http://ropable.com/gallery2/">old photo gallery</a></li>
+                        <li><a href="https://ropable.com/pwyky/">30k wiki in Python</a></li>
                     </ul>
                 </div><!-- end col -->
                 <div class="col-md-4">
                     <h4>@me</h4>
                     <ul>
                         <li>Email: ashley at this domain</li>
+                        <li><a href="https://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
+                        <li><a href="https://github.com/ropable">Github</a></li>
                         <li><a href="https://plus.google.com/u/0/+AshleyFelton/posts">Google+</a></li>
                         <li><a href="https://twitter.com/ropable">Twitter</a></li>
-                        <li><a href="https://bitbucket.org/ropable">Bitbucket</a></li>
-                        <li><a href="https://github.com/ropable">Github</a></li>
                         <li><a href="https://au.linkedin.com/in/AshleyFelton">LinkedIn</a></li>
-                        <li><a href="https://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
-                        <li><a href="https://www.thecrag.com/climber/ropable">The Crag</a></li>
+                        <li><a href="https://www.thecrag.com/climber/ropable">The Crag</a> (climbing)</li>
                     </ul>
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -60,7 +55,7 @@
         <div id="push"></div>
         </div> <!-- /wrap -->
         <div id="footer">
-            <p class="text-center"><small>&copy; Ashley Felton 2005-2015</small></p>
+            <p class="text-center"><small>&copy; Ashley Felton 2005-</small></p>
         </div> <!-- end footer -->
     </body>
 </html>
