--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>ropable.com</title>
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.3.2/css/bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"></script>
         <link rel="stylesheet" href="css/main.css">
-        <!-- OpenID delegation -->
-        <link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" />
-        <link rel="openid2.local_id" href="https://plus.google.com/+AshleyFelton" />
+        <title>ropable.com</title>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -24,27 +21,17 @@
                 <h1 class="hidden-xs">ropable.com</h1>
                 <h3 class="visible-xs">ropable.com</h3>
                 <p>I'm Ashley Felton, a full-stack web developer and sysadmin based in Perth, Western Australia.  I mostly do backend and architecture, not so much UI. Does it show? ;-)</p>
-                <p>I enjoy strength training, climbing (indoor & outdoor), hacking, web culture and browsing <a href="https://news.ycombinator.com">Hacker News</a>.</p>
+                <p>I enjoy strength training, climbing & bouldering, marvelling at online subcultures and learning things on <a href="https://news.ycombinator.com">Hacker News</a>.</p>
             </div><!-- end container -->
         </div><!-- end jumbotron -->
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
-                    <h4>Sundry projects:</h4>
-                    <ul>
-                        <li><a href="https://ropable.com/avenger/">Way of the Tiger: Avenger</a> - adapting an out-of-print fighting fantasy book to the web, via AngularJS (<a href="https://bitbucket.org/ropable/way-of-the-tiger-1-avenger">source</a>).</li>
-                        <li><a href="https://plus.google.com/photos/105774289252638144353/albums/5834409724508218081?authkey=CIaXlu-yodLplwE">1000 highly-rated images</a> scraped from Reddit for an auto-updating image carousel (<a href="https://bitbucket.org/ropable/slideshow-pi">source</a>)</li>
-                        <li>Raspberry Pi temperature monitoring & charting (<a href="https://bitbucket.org/ropable/temper">source</a>)</li>
-                        <li><a href="https://ropable.com/pwyky/">30k wiki in Python</a></li>
-                    </ul>
-                </div><!-- end col -->
-                <div class="col-md-4">
+                <div class="col-lg-12">
                     <h4>@me</h4>
                     <ul>
-                        <li>Email: ashley at this domain</li>
+                        <li>Email: ashley, at this very domain</li>
                         <li><a href="https://stackoverflow.com/users/14508/ropable">Stack Overflow</a></li>
                         <li><a href="https://github.com/ropable">Github</a></li>
-                        <li><a href="https://plus.google.com/u/0/+AshleyFelton/posts">Google+</a></li>
                         <li><a href="https://twitter.com/ropable">Twitter</a></li>
                         <li><a href="https://au.linkedin.com/in/AshleyFelton">LinkedIn</a></li>
                         <li><a href="https://www.thecrag.com/climber/ropable">The Crag</a> (climbing)</li>
@@ -55,7 +42,7 @@
         <div id="push"></div>
         </div> <!-- /wrap -->
         <div id="footer">
-            <p class="text-center"><small>&copy; Ashley Felton 2005-</small></p>
+            <p class="text-center"><small>&copy; Ashley Felton 2005 - now</small></p>
         </div> <!-- end footer -->
     </body>
 </html>
